# minimal-llm

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  enviroment.cuda.yml  enviroment.metal.yaml  environment.cuda.yaml  environment.metal.yaml  main.py  pyproject.toml  setup_env.sh
artifacts/: tokenizer.json
docker/train/: Dockerfile
src/: build_corpus.py  data.py  model.py  prepare_dataset.py  tokenize_to_bin.py  train.py  train_tokenizer.py
src/data/: build_corpus.py  data_loaders.py  tokenize_to_bin.py  train_tokenizer.py
src/minimal_llm/: __init__.py  generate.py  model.py  train.py
src/minimal_llm/data/: __init__.py  build_corpus.py  tokenize_to_bin.py  train_tokenizer.py
tests/: test_placeholder.py
