[project]
name = "minimal-llm"
version = "0.1.0"
description = "A personal implementation of an LLM built from scratch with Pytorch."
readme = "README.md"
authors = [
    { name = "Fabián Murgado", email = "fabian@fabianmurgado.com" }
]
requires-python = ">=3.11,<3.13"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.15.2",
]
