[project]
name = "minimal-llm"
version = "0.1.0"
description = "A personal implementation of an LLM built from scratch with Pytorch."
readme = "README.md"
authors = [
    { name = "Fabián Murgado", email = "fabian@fabianmurgado.com" }
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "datasets>=4.5.0",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.15.2",
]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src"]
exclude = ["docs"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"
